# cadenza

./: .cache  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
cadenza/: __init__.py  app.py  config.py  models.py
cadenza/routes/: api.py  main.py  playlists.py  settings.py
cadenza/scheduler/: jobs.py
cadenza/services/: downloader.py  matcher.py  metadata.py  spotify.py  sync.py
cadenza/static/css/: style.css
cadenza/static/js/: app.js
cadenza/templates/: base.html  index.html  settings.html
cadenza/templates/partials/: playlist_card.html  status_counts.html  sync_logs.html  sync_status.html  track_row.html  track_table_body.html
cadenza/templates/playlists/: add.html  detail.html  list.html
cadenza/utils/: helpers.py  logger.py
