[project]
name = "cadenza"
version = "0.1.0"
description = "Self-hosted Spotify playlist sync — download your playlists from YouTube Music"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Kemal Asli Yuksek"},
]
keywords = ["spotify", "youtube-music", "navidrome", "self-hosted", "music"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio",
]

[project.urls]
Homepage = "https://github.com/kemalasliyuksek/cadenza"
Repository = "https://github.com/kemalasliyuksek/cadenza"
Issues = "https://github.com/kemalasliyuksek/cadenza/issues"
